[package]
name = "usaddress"
version = "0.1.0"
edition = "2018"
authors = [
    "Boyd Johnson johnson.boyd@gmail.com",
]
description = "Parse US Addresses into parts"
categories = ["command-line-utilities", "gis"]
repository = "https://github.com/boydjohnson/usaddress-rs"
license = "Apache-2.0"

[dependencies]
crfs = "0.1"
lazy_static = "1.4"
regex = "1.5"
